[gd_scene load_steps=20 format=2]

[ext_resource path="res://gui/screens/main_menu/assets/2.png" type="Texture" id=1]
[ext_resource path="res://gui/screens/main_menu/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/screens/main_menu/scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://worlds/NIVELES DE TESTEO/WorldSprint2.tscn" type="PackedScene" id=4]
[ext_resource path="res://gui/screens/main_menu/assets/GUI.png" type="Texture" id=5]
[ext_resource path="res://gui/screens/main_menu/assets/twitter.png" type="Texture" id=6]
[ext_resource path="res://gui/screens/main_menu/assets/instagram.png" type="Texture" id=7]
[ext_resource path="res://gui/screens/main_menu/assets/tik-tok.png" type="Texture" id=8]
[ext_resource path="res://gui/screens/main_menu/assets/3.png" type="Texture" id=9]
[ext_resource path="res://gui/screens/main_menu/assets/1.png" type="Texture" id=10]
[ext_resource path="res://gui/screens/main_menu/assets/4.png" type="Texture" id=11]
[ext_resource path="res://music/xDeviruchi - Exploring The Unknown.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 4
outline_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 5 )
region_rect = Rect2( 145, 113, 46, 14 )
modulate_color = Color( 1, 0.976471, 0.364706, 1 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 5 )
region_rect = Rect2( 145, 98, 46, 13 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 5 )
region_rect = Rect2( 144.803, 80.9569, 46.1913, 13.5561 )

[sub_resource type="StreamTexture" id=7]

[sub_resource type="StyleBoxTexture" id=11]

[node name="MainMenu" type="Node2D"]
pause_mode = 2
z_index = -5
script = ExtResource( 3 )
mainGameScene = ExtResource( 4 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 4.0
margin_right = 1920.0
margin_bottom = 1084.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/margin_right = 700
custom_constants/margin_top = 100
custom_constants/margin_left = 700
custom_constants/margin_bottom = 250

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 700.0
margin_top = 100.0
margin_right = 1220.0
margin_bottom = 830.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 520.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "
The Last Omen"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 244.0
margin_right = 520.0
margin_bottom = 694.0
rect_min_size = Vector2( 0, 450 )
size_flags_vertical = 0
custom_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 520.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 1

[node name="LocalCampaignBtn" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 100.0
margin_right = 420.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 10 )
text = "Single Player"
icon = SubResource( 7 )

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 520.0
margin_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 1

[node name="PlayerVsPlayerBtn" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 100.0
margin_right = 420.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 10 )
text = "Player vs Player"
icon = SubResource( 7 )

[node name="MarginContainer8" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 520.0
margin_bottom = 219.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 1

[node name="Leaderboard" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer8"]
margin_left = 100.0
margin_right = 420.0
margin_bottom = 65.0
focus_next = NodePath("../../MarginContainer4/SettingsBtn")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 10 )
text = "Leaderboard"
icon = SubResource( 7 )

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 229.0
margin_right = 520.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 1

[node name="SettingsBtn" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4"]
margin_left = 100.0
margin_right = 420.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 10 )
text = "Settings"
icon = SubResource( 7 )

[node name="MarginContainer5" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 306.0
margin_right = 520.0
margin_bottom = 373.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 1

[node name="AboutBtn" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer5"]
margin_left = 100.0
margin_right = 420.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 10 )
text = "About"
icon = SubResource( 7 )

[node name="MarginContainer7" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 306.0
margin_right = 520.0
margin_bottom = 373.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 1

[node name="LogOutBtn" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer7"]
modulate = Color( 1, 0.87451, 0.47451, 1 )
margin_left = 100.0
margin_right = 420.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Log out"
icon = SubResource( 7 )

[node name="MarginContainer6" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 383.0
margin_right = 520.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 1

[node name="ExitBtn" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer6"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 100.0
margin_right = 420.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.941176, 0.0705882, 0.0705882, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 10 )
text = "Exit to desktop"
icon = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer"]
position = Vector2( -87, -7 )
scale = Vector2( 15.6932, 21.4545 )
z_index = -10
z_as_relative = false
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 2, 34, 44, 44 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 698.0
margin_right = 520.0
margin_bottom = 730.0

[node name="Twitter" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 170.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 6 )
flat = true
icon_align = 1
expand_icon = true

[node name="TikTok" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 174.0
margin_right = 345.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 8 )
flat = true
icon_align = 1
expand_icon = true

[node name="Instagram" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 349.0
margin_right = 520.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 7 )
flat = true
icon_align = 1
expand_icon = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Layer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer1"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 10 )
centered = false

[node name="Layer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/Layer2"]
position = Vector2( -5.00003, -7.00003 )
scale = Vector2( 3.34549, 3.33642 )
texture = ExtResource( 1 )
centered = false

[node name="Layer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/Layer3"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 9 )
centered = false

[node name="Layer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/Layer4"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 11 )
centered = false

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/LocalCampaignBtn" to="." method="_on_LocalCampaignBtn_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/PlayerVsPlayerBtn" to="." method="_on_PlayerVsPlayerBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer8/Leaderboard" to="." method="_on_Leaderboard_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer5/AboutBtn" to="." method="_on_AboutBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer7/LogOutBtn" to="." method="_on_LogOutBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer6/ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Twitter" to="." method="_on_AboutBtn2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/TikTok" to="." method="_on_TikTok_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Instagram" to="." method="_on_Instagram_pressed"]
